// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a desktop employee panel 1`] = `
"<div className=\\"employee-panel-container ui segment\\">
  <div className=\\"header\\" onClick={{...}} role=\\"button\\" tabIndex={0}>
    <span className=\\"titleText\\">
      Leena Razzaq
    </span>
    <span className=\\"classGlobeLink\\">
      <a data-tip=\\"View on neu.edu\\" target=\\"_blank\\" rel=\\"noopener noreferrer\\" className=\\"inlineBlock\\" href=\\"https://www.ccis.northeastern.edu/people/leena-razzaq/\\">
        <SvgGlobe alt=\\"globe\\" />
      </a>
    </span>
  </div>
  <div className=\\"body\\" style={{...}}>
    <div className=\\"inlineBlock contact-box\\">
      Assistant Teaching Professor
      <br />
      CCIS
      <br />
      <a target=\\"_blank\\" rel=\\"noopener noreferrer\\" href=\\"https://www.ccis.northeastern.edu/people/leena-razzaq/\\">
        NEU Profile
      </a>
      <br />
      <a target=\\"_blank\\" rel=\\"noopener noreferrer\\" href=\\"http://www.ccs.neu.edu/home/lrazzaq/\\">
        Personal Website
      </a>
    </div>
    <div className=\\"employee-panel-second-column\\">
      132C Nightingale Hall
      <br />
      <a className=\\"employeeEmail\\" data-tip=\\"\\" role=\\"button\\" tabIndex={0} onClick={[Function: bound copyOnClick]} onMouseEnter={[Function: bound showTooltipOnEvent]} onMouseLeave={[Function: bound hideTooltipOnEvent]} href={[undefined]}>
        l.razzaq@northeastern.edu
      </a>
      <br />
      <a className=\\"employeeEmail\\" data-tip=\\"\\" role=\\"button\\" tabIndex={0} onClick={[Function: bound copyOnClick]} onMouseEnter={[Function: bound showTooltipOnEvent]} onMouseLeave={[Function: bound hideTooltipOnEvent]} href={[undefined]}>
        lrazzaq@ccs.neu.edu
      </a>
      <br />
      <a data-tip=\\"\\" className=\\"employeePhone\\" role=\\"button\\" tabIndex={0} onClick={[Function: bound copyOnClick]} onMouseEnter={[Function: bound showTooltipOnEvent]} onMouseLeave={[Function: bound hideTooltipOnEvent]} href={[undefined]}>
        617-373-5797
      </a>
    </div>
  </div>
</div>"
`;

exports[`should render a mobile employee panel 1`] = `
"<div className=\\"employee-panel-container ui segment\\">
  <div className=\\"header\\" onClick={[Function: bound toggleShowMoreThanTitle]} role=\\"button\\" tabIndex={0}>
    <SvgChevronRight className=\\"chevron\\" alt=\\"\\" />
    <span className=\\"titleText\\">
      Leena Razzaq
    </span>
  </div>
  <div className=\\"body\\" style={{...}}>
    <div className=\\"inlineBlock contact-box\\">
      Assistant Teaching Professor
      <br />
      CCIS
      <br />
      132C Nightingale Hall
      <br />
      <a className=\\"employeeEmail\\" data-tip=\\"\\" role=\\"button\\" tabIndex={0} onClick={[undefined]} onMouseEnter={[undefined]} onMouseLeave={[undefined]} href=\\"mailto:l.razzaq@northeastern.edu\\">
        l.razzaq@northeastern.edu
      </a>
      <br />
      <a className=\\"employeeEmail\\" data-tip=\\"\\" role=\\"button\\" tabIndex={0} onClick={[undefined]} onMouseEnter={[undefined]} onMouseLeave={[undefined]} href=\\"mailto:lrazzaq@ccs.neu.edu\\">
        lrazzaq@ccs.neu.edu
      </a>
      <br />
      <a data-tip=\\"\\" className=\\"employeePhone\\" role=\\"button\\" tabIndex={0} onClick={[undefined]} onMouseEnter={[undefined]} onMouseLeave={[undefined]} href=\\"tel:6173735797\\">
        617-373-5797
      </a>
    </div>
    <div className=\\"employee-panel-second-column\\">
      <a target=\\"_blank\\" rel=\\"noopener noreferrer\\" href=\\"http://www.ccs.neu.edu/home/lrazzaq/\\">
        Personal Website
      </a>
    </div>
  </div>
</div>"
`;
